force-app/main/default/objects/Modulo__c/fields/N_de_Material__c.field-meta.xml
<CustomField>
    <fullName>N_de_Material__c</fullName>
    <label>N° de Material</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>