force-app/main/default/objects/Modulo__c/fields/Todos__c.field-meta.xml
<CustomField>
    <fullName>Todos__c</fullName>
    <description>Para que puedan escribir &apos;Todos&apos; en el lookup y traer todos los registros</description>
    <label>Todos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>