force-app/main/default/objects/Modulo__c/fields/Valor_Max_del_Modulo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Max_del_Modulo__c</fullName>
    <label>Valor Max del Modulo x dia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>