force-app/main/default/objects/Modulo__c/validationRules/Editar_nombre_de_Modulo.validationRule-meta.xml
<ValidationRule>
    <fullName>Editar_nombre_de_Modulo</fullName>
    <active>true</active>
    <description>Para perfil operador partner</description>
    <errorConditionFormula>AND( $Profile.Name == &apos;Operador Partner&apos;, 
					 NOT(ISNEW()),
				 ISCHANGED(Name) 
				)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No es posible editar el nombre del Modulo.</errorMessage>
</ValidationRule>